--- a/app/assets/styles/base/_utilities.scss
+++ b/app/assets/styles/base/_utilities.scss
@@ -81,22 +81,47 @@
   text-align: center;
   margin-bottom: $space-10;
 
+  @media (min-width: $container-lg) {
+    margin-bottom: $space-12;
+  }
+
   &__title {
-    font-size: $heading-2-size;
-    font-weight: $heading-2-weight;
-    margin-bottom: $space-3;
+    position: relative;
+    display: inline-block;
+    font-size: $font-size-2xl;
+    font-weight: $font-weight-bold;
+    color: $color-text-primary;
+    margin-bottom: $space-4;
 
     @media (min-width: $container-md) {
-      font-size: $heading-1-size;
+      font-size: $font-size-3xl;
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: -$space-2;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 48px;
+      height: 3px;
+      background: linear-gradient(90deg, $primary-400, $primary-600);
+      border-radius: $radius-full;
     }
   }
 
   &__subtitle {
-    font-size: $body-lg-size;
+    font-size: $font-size-base;
     color: $color-text-secondary;
-    max-width: 600px;
+    line-height: $line-height-relaxed;
+    max-width: 560px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: $space-4;
+
+    @media (min-width: $container-md) {
+      font-size: $font-size-lg;
+    }
   }
 }
 
