--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -27,3 +27,8 @@
 @use 'components/accordion';
 @use 'components/modal';
 @use 'components/partners';
+
+// ===========================
+// 4. Pages
+// ===========================
+@use 'pages/about';
