--- a/app/assets/styles/components/_accordion.scss
+++ b/app/assets/styles/components/_accordion.scss
@@ -224,6 +224,7 @@
 
   &__course {
     flex-shrink: 0;
+    width: fit-content;
     padding: $space-0-5 $space-2;
     font-size: 10px;
     font-weight: $font-weight-medium;
