--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -32,3 +32,8 @@
 // 4. Pages
 // ===========================
 @use 'pages/about';
+@use 'pages/home';
+@use 'pages/courses';
+@use 'pages/reviews';
+@use 'pages/faq';
+@use 'pages/contact';
